# wasm-coremark-rs

./: Cargo.toml  LICENSE  README.md  coremark-minimal-mvp.wasm  coremark-minimal.wasm  main.rs
src/: main.rs  spacewasm.rs  stitch.rs  wamr.rs  wasm3.rs  wasmi_v1.rs  wasmi_v2.rs  wasmtime.rs
src/runtimes/: mod.rs  tinywasm.rs  wasm3.rs  wasmedge.rs
