[package]
name = "wasmi-coremark"
version = "0.1.0"
authors = ["Robin Freyler <robinfreyler@web.de>"]
edition = "2024"

[[bin]]
name = "bm"
path = "src/main.rs"

[dependencies]
wasmtime = { version = "46.0.0", optional = true }
makepad-stitch = { version = "0.1", optional = true }
wasmi-v1 = { package = "wasmi", version = "1.0.9", optional = true }
tinywasm = { version = "0.9", default-features = false, features = ["std", "archive", "parser"], optional = true }
anyhow = "1"

[dependencies.wasmi]
version = "2.0.0-beta.7"
default-features = false
features = ["std", "validate"]
optional = true

[dependencies.wasm3]
git = "https://github.com/robbepop/wasm3-rs.git"
branch = "rf-fix-wasm3-rs"
features = ["build-bindgen"]
optional = true

[dependencies.wamr-rust-sdk]
git = "https://github.com/robbepop/wamr-rust-sdk.git"
branch = "rf-no-wamrc"
optional = true

[dependencies.wamr-sys]
git = "https://github.com/robbepop/wamr-rust-sdk.git"
branch = "rf-no-wamrc"
optional = true

[dependencies.wasmedge-sdk]
version = "0.14"
default-features = false
features = ["standalone"]
optional = true

[dependencies.spacewasm]
git = "https://github.com/nasa/spacewasm.git"
optional = true

[dependencies.spacewasm_util]
git = "https://github.com/nasa/spacewasm.git"
optional = true

[profile.release]
lto = "fat"
codegen-units = 1

[features]
default = ["wasmi", "wasmi-v1", "stitch", "wasm3", "tinywasm"]
wasmi = ["dep:wasmi"]
wasmi-v1 = ["dep:wasmi-v1"]
stitch = ["dep:makepad-stitch"]
wasm3 = ["dep:wasm3"]
wasmtime = ["dep:wasmtime"]
winch = ["dep:wasmtime", "wasmtime/winch"]
pulley = ["dep:wasmtime", "wasmtime/pulley"]
tinywasm = ["dep:tinywasm"]
wamr = ["dep:wamr-rust-sdk", "dep:wamr-sys"]
wasmedge = ["dep:wasmedge-sdk"]
spacewasm = ["dep:spacewasm", "dep:spacewasm_util"]
